--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --bg-dark: #111827;
-    --bg-card: #1f2937;
+    --bg-card: #1f2_937;
     --border-color: #374151;
     --text-primary: #F0F6FC;
     --text-secondary: #C9D1D9;
